[package]
name = "rust-unsorter"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.118"
rand = "0.10.1"

getrandom = { version = "0.4.2", features = ["wasm_js"] }


serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6